--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -4,7 +4,7 @@
   grid-template-areas: "header header" "aside main";
   grid-template-columns: 250px 1fr;
   grid-template-rows: auto 1fr;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .main__header {
