--- a/src/app/UIComponents/ui-button/ui-button.component.scss
+++ b/src/app/UIComponents/ui-button/ui-button.component.scss
@@ -1,18 +1,20 @@
 .btn {
   padding: 5px 10px;
-  border: 1px solid var(--light-color);
+  border: 1px solid var(--dark-color);
   border-radius: 4px;
-  transition-duration: 0.2s;
+  transition-duration: 0.1s;
+  box-shadow: var(--btn-box-shadow);
 }
 
 .btn:hover {
-  background-color: var(--yellow-color);
-  color: var(--dark-color);
+  background-color: var(--hover-color);
 }
 
 .btn:active {
-  background-color: var(--blue-color);
-  color: var(--light-color);
+  background-color: var(--active-color);
+  color: var(--dark-color);
+  transform: translate(1px, 1px);
+  box-shadow: var(--black-color) 0 0 0;
 }
 
 .list-btn {
@@ -23,4 +25,9 @@
   height: 20px;
   padding: 0;
   line-height: 0.1px;
+}
+
+.modal__close-btn{
+  padding: 2px 4px;
+  font-size: 10px;
 }
