--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -1,10 +1,10 @@
 .main {
-  background-color: var(--dark-color);
+  background-color: var(--light-color);
   display: grid;
   grid-template-areas: "header header" "aside main";
   grid-template-columns: 250px 1fr;
   grid-template-rows: auto 1fr;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .main__header {
@@ -21,11 +21,11 @@
 
 .main__aside,
 .main__table {
-  height: 100%;
+  min-height: 100%;
 }
 
 .main__aside,
 .main__table,
 .main__header {
-  outline: 1px solid var(--black);
+  outline: 1px solid var(--black-color);
 }
