Зроблено: Додавання інструкцій в базу і на сервер. Можливість скачування інструкцій, розкривання списку aside, правильний формат дати Почато модалку додавання протоколу

--- a/src/app/UIComponents/ui-button/ui-button.component.html
+++ b/src/app/UIComponents/ui-button/ui-button.component.html
@@ -1,7 +1,12 @@
 <button
-  [attr.type]="type"
+
   [ngClass]="fullClass"
-  [attr.style]="btnStyle"
+  [attr.style]="btnStyle()"
+  [attr.type]="type()"
+  [attr.workshop-id]="workshopId()"
+  [attr.department-id]="departmentId()"
+  [attr.section-id]="sectionId()"
+  [attr.unit-id]="unitId()"
   (click)="onClick($event)"
 >
   <ng-content></ng-content>
