--- a/src/icon-font.scss
+++ b/src/icon-font.scss
@@ -25,6 +25,9 @@
 .icon-folder-download:before {
   content: "\e933";
 }
+.icon-search:before {
+  content: "\e986";
+}
 .icon-cross:before {
   content: "\ea0f";
 }
