--- a/src/app/components/aside-component/aside-component.component.html
+++ b/src/app/components/aside-component/aside-component.component.html
@@ -1,53 +1,60 @@
 <aside class="aside">
-  <ul class="aside__list aside__list--root" >
-    @for (w of asideData; track w.id) {
-      <li class="aside__item" >
+  <ul class="aside__list aside__list--root">
+    @for (workshop of asideData; track workshop.id) {
+      <li class="aside__item">
         <div class="aside__btns">
-          @if (w.departments.length) {
-            <app-ui-button
-              className="list-btn"
-              (btnClick)="hideSublist($event)"
-            >
-              +
-            </app-ui-button>
-            <app-ui-button (btnClick)="showInstructionsByWorkshop(w.title)">{{ w.title }}</app-ui-button>
+          @if (workshop.departments.length) {
+            <app-ui-button className="btn-plus" (btnClick)="hideSublist($event)">+</app-ui-button>
+            <app-ui-button [workshopId]="workshop.id" (btnClick)="getInstructionByW($event)">{{ workshop.title }}</app-ui-button>
           } @else {
-            <app-ui-button (btnClick)="showInstructionsByWorkshop(w.title)">{{ w.title }}</app-ui-button>
+            <app-ui-button style="margin-left: 25px" [workshopId]="workshop.id" (btnClick)="getInstructionByW($event)">{{ workshop.title }}</app-ui-button>
           }
         </div>
-        <ul class="aside__list aside__list--collapsed">
-          @for (d of w.departments; track d.id) {
-            <li class="aside__item">
-              <div class="aside__btns">
-                @if (d.groups?.length) {
-                  <app-ui-button
-                    className="list-btn"
-                    (btnClick)="hideSublist($event)"
-                    style="margin-left: 30px"
-                  >
-                    +
-                  </app-ui-button>
-                  <app-ui-button (btnClick)="showInstructionsByDepartment(d.title, w.title)">{{ d.title }}</app-ui-button>
-                } @else {
-                  <app-ui-button style="margin-left: 58px" (btnClick)="showInstructionsByDepartment(d.title, w.title)">
-                    {{ d.title }}
-                  </app-ui-button>
+        @if (workshop.departments.length) {
+          <ul class="aside__list aside__list--collapsed">
+            @for (department of workshop.departments; track department.id) {
+              <li class="aside__item" style="margin-left: 25px">
+                <div class="aside__btns">
+                  @if (department.sections.length) {
+                    <app-ui-button className="btn-plus" (btnClick)="hideSublist($event)">+</app-ui-button>
+                    <app-ui-button [departmentId]="department.id" (btnClick)="getInstructionByD($event)">{{ department.title }}</app-ui-button>
+                  } @else {
+                    <app-ui-button style="margin-left: 25px" [departmentId]="department.id" (btnClick)="getInstructionByD($event)">{{ department.title }}</app-ui-button>
+                  }
+                </div>
+
+                @if (department.sections.length) {
+                  <ul class="aside__list aside__list--collapsed">
+                    @for (section of department.sections; track section.id) {
+                      <li class="aside__item">
+                        <div class="aside__btns">
+                          @if (section.units?.length) {
+                            <app-ui-button className="btn-plus" (btnClick)="hideSublist($event)" style="margin-left: 25px">+</app-ui-button>
+                            <app-ui-button [sectionId]="section.id" (btnClick)="getInstructionByS($event)">{{ section.title }}</app-ui-button>
+                          } @else {
+                            <app-ui-button style="margin-left: 25px" [sectionId]="section.id" (btnClick)="getInstructionByS($event)">{{ section.title }}</app-ui-button>
+                          }
+                        </div>
+
+                        @if (section.units?.length) {
+                          <ul class="aside__list aside__list--collapsed">
+                            @for (unit of section.units; track unit.id) {
+                              <li class="aside__item">
+                                <div class="aside__btns">
+                                  <app-ui-button style="margin-left: 75px" [unitId]="unit.id" (btnClick)="getInstructionByU($event)">{{ unit.title }}</app-ui-button>
+                                </div>
+                              </li>
+                            }
+                          </ul>
+                        }
+                      </li>
+                    }
+                  </ul>
                 }
-              </div>
-              <ul class="aside__list aside__list--collapsed">
-                @for (g of d.groups; track g.id) {
-                  <li class="aside__item">
-                    <div class="aside__item-wrapper">
-                      <app-ui-button style="margin-left: 80px" (btnClick)="showInstructionsByGroup(g.title, d.title, w.title)">
-                        {{ g.title }}
-                      </app-ui-button>
-                    </div>
-                  </li>
-                }
-              </ul>
-            </li>
-          }
-        </ul>
+              </li>
+            }
+          </ul>
+        }
       </li>
     }
   </ul>
