--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
   --modal-bg-color: rgba(220, 220, 220, 0.5);
   --modal-box-shadow: var(--black-color) 4px 4px 20px;
   --btn-box-shadow: var(--black-color) 1px 1px 2px;
+  --focused-box-shadow: var(--black-color) 4px 4px 10px;
 }
 
 body {
