--- a/src/app/UIComponents/ui-modal/ui-modal.component.scss
+++ b/src/app/UIComponents/ui-modal/ui-modal.component.scss
@@ -6,7 +6,6 @@
   height: 100dvh;
   background-color: var(--modal-bg-color);
   overflow: hidden;
-  cursor: pointer;
   animation: open-modal forwards linear .1s;
   z-index: 1;
 }
@@ -37,6 +36,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 
