--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,17 @@ body {
   color: var(--dark-color);
   font-family: "Roboto", sans-serif;
 }
+
+
+.form__text-input{
+  border: 1px solid var(--dark-color);
+  border-radius: 4px;
+  padding: 4px 8px;
+}
+
+.form__textarea{
+  border: 1px solid var(--dark-color);
+  border-radius: 4px;
+  padding: 4px 8px;
+  resize: none;
+}
