Почато модалку реєстрації протоколів

--- a/src/app/UIComponents/ui-modal/ui-modal.component.scss
+++ b/src/app/UIComponents/ui-modal/ui-modal.component.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100dvw;
-  height: 100dvh;
+  height: 100vh;
   background-color: var(--modal-bg-color);
   overflow: hidden;
   animation: open-modal forwards linear .1s;
