--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -65,7 +65,9 @@
   [(currentInstruction)] = "currentInstruction"
   [(isRegProtocolModalOpen)]="isRegProtocolModalOpen"
   [(currentProtocol)]="currentProtocol"
+  [(measurementsArray)]="measurementsArray"
 />
 <app-reg-protocol-modal-component
+  [(measurementsArray)]="measurementsArray"
   [(isRegProtocolModalOpen)]="isRegProtocolModalOpen"
   [(currentProtocol)]="currentProtocol"/>
