--- a/src/app/components/modals/reg-protocol-modal-component/reg-protocol-modal-component.component.html
+++ b/src/app/components/modals/reg-protocol-modal-component/reg-protocol-modal-component.component.html
@@ -1,3 +1,129 @@
 <app-ui-modal [(isOpen)]="isRegProtocolModalOpen" width="800">
-{{currentProtocol().title}}
+  <h4 class="title">{{ currentProtocol().title }}</h4>
+  <div class="protocol">
+    <table class="protocol__table">
+      <thead class="protocol__thead">
+        @if (currentProtocol().equipmentInfo?.length === 0) {
+          <tr class="protocol__tr">
+            <th class="protocol__th"></th>
+            <th class="protocol__th" colspan="2"><input #textInput class="protocol_input" type="text"></th>
+            <th class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></th>
+          </tr>
+        } @else {
+          @if (currentProtocol().equipmentInfo?.length === 1) {
+            <tr class="protocol__tr">
+              <th class="protocol__th"></th>
+              <th class="protocol__th longcell">{{ currentProtocol().equipmentInfo?.[0] }}</th>
+              <th class="protocol__th longcell"><input #textInput class="protocol_input" type="text"></th>
+              <th class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></th>
+            </tr>
+          } @else {
+            <tr class="protocol__tr">
+              <th class="protocol__th" [attr.rowspan]="currentProtocol().equipmentInfo?.length"></th>
+              <th class="protocol__th longcell">{{ currentProtocol().equipmentInfo?.[0] }}</th>
+              <th class="protocol__th longcell"><input #textInput class="protocol_input" type="text"></th>
+              <th class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></th>
+            </tr>
+            @for (equipment of currentProtocol().equipmentInfo; let i = $index; track $index) {
+              @if (i > 0) {
+                <tr class="protocol__tr">
+                  <th class="protocol__th longcell">{{ equipment }}</th>
+                  <th class="protocol__th longcell"><input #textInput class="protocol_input" type="text"></th>
+                  <th class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></th>
+                </tr>
+              }
+            }
+          }
+        }
+      </thead>
+      <tbody class="protocol__tbody">
+      <tr class="protocol__tr">
+        <td class="protocol__td">{{ currentProtocol().repairType }}</td>
+        <td class="protocol__td">Роботи, що виконуються</td>
+        <td class="protocol__td">Результат</td>
+        <td class="protocol__td">Запам'ятати</td>
+      </tr>
+        @for (job of currentProtocol().jobs; track $index) {
+          @if (job.jobsDesc.length === 1) {
+            <tr class="protocol__tr">
+              <td class="protocol__td">{{ job.number }}</td>
+              <td class="protocol__td">{{ job.jobsDesc[0] }}</td>
+              <td class="protocol__td"><input #textInput class="protocol_input" type="text"></td>
+              <td class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></td>
+            </tr>
+          } @else {
+            <tr class="protocol__tr">
+              <td class="protocol__td" [attr.rowspan]="job.jobsDesc.length">{{ job.number }}</td>
+              <td class="protocol__td">{{ job.jobsDesc[0] }}</td>
+              <td class="protocol__td"><input #textInput class="protocol_input" type="text"></td>
+              <td class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></td>
+            </tr>
+            @for (jobDesc of job.jobsDesc; let i = $index; track $index) {
+              @if (i > 0) {
+                <tr class="protocol__tr">
+                  <td class="protocol__td longcell">{{ jobDesc }}</td>
+                  <td class="protocol__td longcell"><input #textInput class="protocol_input" type="text"></td>
+                  <td class="protocol__td longcell"><input #checkboxInput class="protocol_checkbox" type="checkbox"></td>
+                </tr>
+              }
+            }
+          }
+        }
+      </tbody>
+      <tfoot class="protocol__tfoot">
+        @if (currentProtocol().extraInfo?.length === 1) {
+          <tr class="protocol__tr">
+            <td class="protocol__td"></td>
+            <td class="protocol__td">{{ currentProtocol().extraInfo?.[0] }}</td>
+            <td class="protocol__td"><input #textInput class="protocol_input" type="text"></td>
+            <td class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></td>
+          </tr>
+        } @else {
+          @if (currentProtocol().extraInfo && currentProtocol().extraInfo!.length > 1) {
+            <tr class="protocol__tr">
+              <td class="protocol__td" [attr.rowspan]="currentProtocol().extraInfo?.length"></td>
+              <td class="protocol__td">{{ currentProtocol().extraInfo?.[0] }}</td>
+              <td class="protocol__td"><input #textInput class="protocol_input" type="text"></td>
+              <td class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></td>
+            </tr>
+            @for (info of currentProtocol().extraInfo; let i = $index; track $index) {
+              @if (i > 0) {
+                <tr class="protocol__tr">
+                  <td class="protocol__td longcell">{{ info }}</td>
+                  <td class="protocol__td"><input #textInput class="protocol_input" type="text"></td>
+                  <td class="protocol__td"><input #checkboxInput class="protocol_checkbox" type="checkbox"></td>
+                </tr>
+              }
+            }
+          }
+
+        }
+      </tfoot>
+    </table>
+      @if (currentProtocol().measurements) {
+        <h3 class="protocol__zvt-text">При роботі використовувались ЗВТ:</h3>
+        <table class="protocol__zvt-table">
+          <thead class="protocol__zvt-thead">
+          <th class="protocol__zvt-th">Найменування</th>
+          <th class="protocol__zvt-th">Тип</th>
+          <th class="protocol__zvt-th">Заводський номер</th>
+          <th class="protocol__zvt-th">Дата наступної перевірки</th>
+
+          <tbody class="protocol__zvt-tbody">
+            @for (_ of measurementsArray(); track $index) {
+              <tr class="protocol__zvt-tr">
+                <th class="protocol__zvt-td"></th>
+                <th class="protocol__zvt-td"></th>
+                <th class="protocol__zvt-td"></th>
+                <th class="protocol__zvt-td"></th>
+
+              </tr>
+            }
+
+          </tbody>
+        </table>
+      }
+  </div>
+
+
 </app-ui-modal>
