--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -69,5 +69,6 @@
 />
 <app-reg-protocol-modal-component
   [(measurementsArray)]="measurementsArray"
+  [(currentInstruction)] = "currentInstruction"
   [(isRegProtocolModalOpen)]="isRegProtocolModalOpen"
   [(currentProtocol)]="currentProtocol"/>
