--- a/src/app/components/modals/reg-protocol-modal-component/reg-protocol-modal-component.component.scss
+++ b/src/app/components/modals/reg-protocol-modal-component/reg-protocol-modal-component.component.scss
@@ -1,21 +1,21 @@
-.title{
+.title {
   text-align: center;
   margin-bottom: 20px;
 }
 
-.protocol{
+.protocol {
   border-collapse: collapse;
   max-height: 500px;
   margin: 0 auto;
 }
 
 .protocol th,
-.protocol td{
+.protocol td {
   border: 1px solid black;
 }
 
 .protocol__table,
-.protocol__zvt-table{
+.protocol__zvt-table {
   border: 2px solid black;
   margin-bottom: 10px;
 }
@@ -23,7 +23,7 @@
 .protocol__th,
 .protocol__td,
 .protocol__zvt-td,
-.protocol__zvt-th{
+.protocol__zvt-th {
   padding: 5px 10px;
   height: 28px;
 }
@@ -48,12 +48,18 @@
 }
 
 .protocol__th:nth-child(3),
-.protocol__td:nth-child(3){
+.protocol__td:nth-child(3) {
   width: 100px;
 }
 
 .protocol__th:nth-child(4),
-.protocol__td:nth-child(4){
+.protocol__td:nth-child(4) {
+  width: 150px;
+  text-align: center;
+}
+
+.protocol__th:nth-child(5),
+.protocol__td:nth-child(5) {
   width: auto;
   text-align: center;
 }
@@ -75,9 +81,18 @@
   text-align: center;
   width: 50px;
 }
+.protocol__td:nth-child(4).longcell,
+.protocol__th:nth-child(4).longcell {
+  text-align: center;
+  width: 50px;
+}
 
 .protocol__zvt-text {
   margin-bottom: 5px;
+}
+
+.protocol__zvt-td {
+  text-align: center;
 }
 
 .protocol__zvt-td:first-child,
@@ -97,20 +112,25 @@
 
 .protocol__zvt-td:nth-child(4),
 .protocol__zvt-th:nth-child(4) {
-  width: 100px;
+  width: 112px;
 }
 
-.protocol__del-btn,
-.protocol__zvt-del-btn {
-  width: 50px;
-  cursor: pointer;
-  border: none !important;
+.protocol__zvt-td:nth-child(5),
+.protocol__zvt-th:nth-child(5) {
+  width: auto;
 }
 
-.protocol_input{
+
+.protocol_input {
   width: 100%;
 }
 
-.protocol_checkbox{
+.protocol_checkbox {
   cursor: pointer;
+}
+
+.btns{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
